# baby-gpt

./: .gitignore  pyproject.toml
srcs/bebegepeto/: bigram.py
